Changes for 2.2.0rc1

New features:
.........T [ZBX-6832] improved default templates (e.g., split "Template App Agentless" into 12 templates for each service) (asaveljevs, neogan, Sasha)
..F....... [ZBXNEXT-1851] hid American English, Greek and Polish translations from the frontend (Richlv)

Bug fixes:
..F....... [ZBX-5854] fixed host status indicator not displaying maintenance status in the host configuration form header (Pavels)
..F....... [ZBX-7242] fixed sortable table elements not to change width while dragging them (Ivo)
..F....... [ZBX-7213] fixed pre-loader image width and height for Internet Explorer (Ivo)
....I..... [ZBX-7273] fixed newlines in default data strings for Oracle (Sasha)
........S. [ZBX-7141] made it clear agent of which particular type is unavailable for unknown triggers (asaveljevs, Sasha)

--------------------------------------------------------------------------------
Changes for 2.1.9

New features:
...GI..PS. [ZBXNEXT-1477] added support of Windows eventlog source regex filter (Sasha)
..F.I..... [ZBXNEXT-544] moved help_items data to php code (Pavels, Sasha)
..F....... [ZBXNEXT-1827] improved multiselect full text search (Eduard)
..F....... [ZBX-7065] changed the design of the setup, login and browser warning pages (Pavels)
..F....... [ZBX-6983] renamed the "Latest host group issues" screen element to "Host group issues" and "Latest host issues" to "Host issues" (Pavels)
..F....... [ZBX-7215] improved the design of the search auto suggest (Pavels)
.....J.... [ZBXNEXT-1776] added support for java.math.BigDecimal, java.math.BigInteger and some other open types (asaveljevs)
..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)

Bug fixes:
...G...PS. [ZBX-7125] fixed improper reading of configuration files in case there were problems with included files; we now exit with failure (asaveljevs)
..F....... [ZBX-7257] improved config file validation (Eduard)